# playpen_attribution

./: .gitignore  AGENTS.md  DATA_GENERATION.md  README.md  audit_format.py  build_continuation_data.py  build_pretrain_query.py  build_sft_data.py  data.py  dataset.py  eval_harness.py  eval_words.py  finetune.py  generate_continued_dataset.py  generate_data.py  generate_synthetic_openrouter.py  pipeline_common.py  pretrain.py  probe.py  probe_experiments.py  prompts.py  pyproject.toml  quick_test.py  rebuild_attr_query.py  run_experiments.py  run_gradient_score.py  sae_analysis.py  sae_contrast.py  score.py  score_samples.py  train_bidir_classifier.py  vram.py  vram_profile.py
HuggingFaceTB/SmolLM2-1.7B/: config.json
memory/: MEMORY.md
