[project]
name = "playpen-attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "bergson",
    "datasets>=4.5.0",
    "google-genai",
    "immutabledict>=4.3.1",
    "langdetect>=1.0.9",
    "lm-eval>=0.4.0",
    "openai",
    "peft>=0.18.1",
    "sae-lens",
    "torch>=2.10.0",
    "transformers>=4.55.0,<4.56.0",
    "trl>=0.22,<0.23",
]

